--- a/Employee_Details 1.1/Employee_Details/.project
+++ b/Employee_Details 1.1/Employee_Details/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>author</name>
+	<name>Employee_Details 1.1_Employee_Details</name>
 	<comment></comment>
 	<projects>
 	</projects>
